<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="loginpage.pradeep.loginpage.SignUpPage">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="10dp"
        android:ems="10"
        android:id="@+id/firstname"
        android:hint="@string/firstname"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorBg"
        android:paddingBottom="10px"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="10dp"
        android:ems="10"
        android:id="@+id/lastname"
        android:hint="@string/lastname"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorAccent"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_margin="10dp"
        android:ems="10"
        android:id="@+id/email"
        android:hint="@string/email"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorBg"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/password"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorBg"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:ems="10"
        android:id="@+id/confpassword"
        android:hint="@string/confirmpassword"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorBg"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_margin="10dp"
        android:ems="10"
        android:id="@+id/phoneNumber"
        android:hint ="Phone Number"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorBg"
        tools:ignore="HardcodedText" />

    <Button
        android:text="Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/confrimSignUp" />


</LinearLayout>


